[gd_scene load_steps=15 format=2]

[ext_resource path="res://Script's/AudioGeral.gd" type="Script" id=2]
[ext_resource path="res://Audio/Sound Effects/UI/Hover/ui_menu_hover.mp3" type="AudioStream" id=4]
[ext_resource path="res://Audio/Sound Effects/UI/Click/ui_menu_click.mp3" type="AudioStream" id=5]
[ext_resource path="res://Audio/Sound Effects/UI/Button Memories Hover/ui_memories_hover.mp3" type="AudioStream" id=6]
[ext_resource path="res://Audio/Sound Effects/UI/Button Memories Click/ui_memories_click.mp3" type="AudioStream" id=7]

[sub_resource type="Animation" id=6]
resource_name = "Click"
length = 0.1
tracks/0/type = "audio"
tracks/0/path = NodePath("UI")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "Hover"
length = 0.1
tracks/0/type = "audio"
tracks/0/path = NodePath("UI")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=8]
resource_name = "MemoriesClick"
length = 0.1
tracks/0/type = "audio"
tracks/0/path = NodePath("UI")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "MemoriesHover"
length = 0.1
tracks/0/type = "audio"
tracks/0/path = NodePath("UI")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Soundtrack:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "UIAmbience"
length = 30.55
loop = true

[sub_resource type="Animation" id=12]
resource_name = "FadeinSoundtrack"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Soundtrack:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "FadeoutSoundtrack"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Soundtrack:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Soundtrack:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -30.0 ]
}

[node name="Audio" type="Node"]
script = ExtResource( 2 )

[node name="PlayerSoundtrack" type="AnimationPlayer" parent="."]
pause_mode = 2

[node name="PlayerUI" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Click = SubResource( 6 )
anims/Hover = SubResource( 5 )
anims/MemoriesClick = SubResource( 8 )
anims/MemoriesHover = SubResource( 7 )
anims/RESET = SubResource( 11 )

[node name="PlayerAmbience" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/UIAmbience = SubResource( 9 )

[node name="PlayerFades" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/FadeinSoundtrack = SubResource( 12 )
anims/FadeoutSoundtrack = SubResource( 16 )
anims/RESET = SubResource( 13 )

[node name="Soundtrack" type="AudioStreamPlayer" parent="."]
pause_mode = 2

[node name="UI" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -30.0

[node name="Ambience" type="AudioStreamPlayer" parent="."]
pause_mode = 2

[connection signal="iniciar" from="." to="." method="_on_Audio_iniciar"]
[connection signal="parar" from="." to="." method="_on_Audio_parar"]
[connection signal="animation_finished" from="PlayerSoundtrack" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="PlayerUI" to="." method="_on_PlayerUI_animation_finished"]
